--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
     color: cornsilk;
     min-width: 100%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 header {
@@ -18,6 +19,11 @@ header {
     position: sticky;
     top: 0;
     min-width: 100%;
+}
+
+h1::first-letter {
+    font-weight: bold;
+    color: red;
 }
 
 .rowBox {
@@ -32,7 +38,7 @@ header {
 .col {
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content:space-around;
 }
 
 .textBox {
@@ -44,6 +50,7 @@ header {
     background-color: rgba(0, 0, 0, 0.877);
     box-shadow: 5px 10px 8px #272727b4;
     display: block;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .inputNr {
@@ -51,6 +58,7 @@ header {
     float: right;
     background-color: black;
     color: cornsilk;
+    max-height: 2em;
 }
 
 .button {
@@ -74,6 +82,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 @media only screen and (max-width: 600px) {
